--- a/src/app/components/main-view/manage-receipts/receipt-items-dialog/receipt-items-dialog.component.html
+++ b/src/app/components/main-view/manage-receipts/receipt-items-dialog/receipt-items-dialog.component.html
@@ -4,7 +4,7 @@
 
   <body class="dialog-body">
 
-  <h1 class="h1-regular fw-bold" mat-dialog-title align="center">Receipt Items</h1>
+  <h1 class="h1-regular fw-bold mb-2" mat-dialog-title align="center">Receipt Items</h1>
 
   <div mat-dialog-content class="dialog-content align-items-center text-black">
 
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row mt-3">
 
       <div class="col-sm-3">
 
@@ -70,7 +70,7 @@
 
   </div>
 
-  <div mat-dialog-actions class="dialog-actions" align="center">
+  <div mat-dialog-actions class="dialog-actions mb-3" align="center">
     <button mat-button (click)="onBackClick()">Back</button>
   </div>
 
