--- a/src/app/components/register/register-dialog/register-dialog.component.css
+++ b/src/app/components/register/register-dialog/register-dialog.component.css
@@ -4,9 +4,11 @@
 
 button {
   background-color: #00A1F2;
+  color: white !important;
 }
 
 button:hover {
   background-color: aqua;
   transition: all 0.2s ease;
+  color: white !important;
 }
