Many front-end fixes; Spending statistics test page

--- a/src/app/components/main-view/main-navbar/main-navbar.component.html
+++ b/src/app/components/main-view/main-navbar/main-navbar.component.html
@@ -21,7 +21,7 @@
       <button type="button" class="btn btn-dark" routerLink="/main-view/national-statistics">
         <div class="gap-2 with-icon">
           <mat-icon fontIcon="calendar_today"></mat-icon>
-          Due Payments
+          Due Invoices
         </div>
       </button>
       <button type="button" class="btn btn-dark" routerLink="/main-view/my-account">
