Added custom theme; Added spending statistics page

--- a/src/app/components/main-view/main-navbar/main-navbar.component.html
+++ b/src/app/components/main-view/main-navbar/main-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/main-view/main-page">
+    <a class="navbar-brand navbar-anchor" routerLink="/main-view/main-page">
       <img src="../../../../assets/images/small-logo.png" alt="small-logo.png" width="80" height="80" style=""
            class="d-inline-block align-text-center">
       Personal Finance Manager
@@ -12,7 +12,7 @@
           Home
         </div>
       </button>
-      <button type="button" class="btn btn-dark" routerLink="/main-view/recycling-progress">
+      <button type="button" class="btn btn-dark" routerLink="/main-view/spending-statistics">
         <div class="gap-2 with-icon">
           <mat-icon fontIcon="pie_chart"></mat-icon>
           Spending Statistics
