--- a/src/app/components/main-view/receipt-form/receipt-form.component.html
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.html
@@ -72,9 +72,13 @@
       </div>
 
       <div class="form-group row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-2">
 
-        <div class="col-sm-2"></div>
+        </div>
+
+        <div class="col-sm-2">
+
+        </div>
 
         <div class="col-sm-4">
           <button class="form-control btn btn-primary mx-2 mb-4 shadow-lg fw-bold" (click)="onBackButtonClick()">Back To The Main Menu</button>
