--- a/src/app/components/main-view/main-navbar/main-navbar.component.html
+++ b/src/app/components/main-view/main-navbar/main-navbar.component.html
@@ -24,7 +24,7 @@
           Due Invoices
         </div>
       </button>
-      <button type="button" class="btn btn-dark" routerLink="/main-view/my-account">
+      <button type="button" class="btn btn-dark" routerLink="/main-view/manage-account">
         <div class="gap-2 with-icon">
           <mat-icon fontIcon="person"></mat-icon>
           My Account
