--- a/src/app/components/main-view/spending-statistics/spending-statistics.component.html
+++ b/src/app/components/main-view/spending-statistics/spending-statistics.component.html
@@ -4,6 +4,115 @@
 
   <body>
 
+    <div class="row full-height py-5">
+
+      <div class="col-lg-3">
+
+        <div class="form-group">
+
+          <div class="row">
+            <div class="col-sm-8 text-center">
+              <button routerLink="../main-page" mat-button class="btn bg-transparent back-button">
+                <mat-icon>keyboard_arrow_left</mat-icon>
+                Back to the main page
+              </button>
+            </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-sm-8 fw-bold text-center">
+
+              <p>Year:</p>
+
+              <mat-form-field appearance="fill">
+                <mat-label>Select Year</mat-label>
+                <mat-select [(ngModel)]="yearInput" [required]="true">
+                  <mat-option *ngFor="let year of possibleYears" [value]="year.actualValue">
+                    {{year.displayedValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+              <p class="error-message" *ngIf="showYearInputError">A year must be selected!</p>
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-8 fw-bold text-center">
+
+              <p>Month:</p>
+
+              <mat-form-field appearance="fill">
+                <mat-label>Select Month</mat-label>
+                <mat-select [(ngModel)]="monthInput">
+                  <mat-option *ngFor="let month of possibleMonths" [value]="month.value">
+                    {{month.name}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+            </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-sm-8 mt-3 fw-bold text-center">
+
+              <button mat-button class="btn btn-primary btn-lg search-btn mt-1 text-white shadow" (click)="showCharts()">
+                <mat-icon>pie_chart</mat-icon>
+                Show Statistics
+              </button>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col-lg-3">
+
+        <div class="row mt-3 align-items-center">
+
+          <div class="fw-bold" *ngIf="!pieChartNoData">
+            <p>{{pieChartHeaderText}}</p>
+              <apx-chart
+                [series]="pieChartOptions.series"
+                [chart]="pieChartOptions.chart"
+                [labels]="pieChartOptions.labels"
+                [responsive]="pieChartOptions.responsive"
+              ></apx-chart>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col-lg-6">
+        <div class="row mt-3" *ngIf="isShowLineChart">
+
+          <div class="col-lg-11">
+
+            <apx-chart
+              [series]="lineChartOptions.series"
+              [chart]="lineChartOptions.chart"
+              [xaxis]="lineChartOptions.xaxis"
+              [dataLabels]="lineChartOptions.dataLabels"
+              [grid]="lineChartOptions.grid"
+              [stroke]="lineChartOptions.stroke"
+              [title]="lineChartOptions.title"
+            ></apx-chart>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <!--
     <div class="form-group px-5 py-3 row">
 
       <div class="col-sm-2 fw-bold text-center">
@@ -41,6 +150,7 @@
       <div class="col-sm-2 fw-bold text-center">
 
         <p>Month:</p>
+
         <mat-form-field appearance="fill">
           <mat-label>Select Month</mat-label>
           <mat-select [(ngModel)]="monthInput">
@@ -64,14 +174,6 @@
       </div>
 
     </div>
-
-    <!--
-
-    <div class="row mt-4 mb-3 fw-bold text-center error-message" *ngIf="pieChartNoData">
-      <p>There is no data for {{getMonthNameFromIndex(monthInput)}} {{yearInput}}!</p>
-    </div>
-
-    -->
 
     <div class="row mt-4 mb-3 fw-bold text-center" *ngIf="!pieChartNoData">
       <p>{{pieChartHeaderText}}</p>
@@ -114,6 +216,7 @@
       </div>
 
     </div>
+    -->
 
   </body>
 
