Added add invoice page

--- a/src/app/components/main-view/file-upload/file-upload.component.html
+++ b/src/app/components/main-view/file-upload/file-upload.component.html
@@ -33,7 +33,7 @@
         <button mat-button color="primary" class="btn btn-primary fw-bold shadow upload-btn"
                 (click)="fileUpload.click()">
           <mat-icon>attach_file</mat-icon>
-          Upload File
+          Upload Image
         </button>
       </div>
 
