--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -28,7 +28,7 @@
           <p class="card-text mt-2">Keep track of your invoices and their due dates.</p>
           <br>
           <div class="btn-group-vertical mt-3 mb-5">
-            <a href="#" class="btn btn-primary btn-lg mb-2" role="button">Add New Invoice</a>
+            <a routerLink="../add-invoice" class="btn btn-primary btn-lg mb-2" role="button">Add New Invoice</a>
             <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Invoices</a>
           </div>
           <br>
