--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,6 @@
 body {
   /*background: radial-gradient(#C47AFF 25%, #00A1F2 75%);*/
-  background-color: #ECF2F9;
+  background-color: #F0F0F5;
 }
 
 header {
