Added manage invoices page

--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -29,7 +29,7 @@
           <br>
           <div class="btn-group-vertical mt-3 mb-5">
             <a routerLink="../add-invoice" class="btn btn-primary btn-lg mb-2" role="button">Add New Invoice</a>
-            <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Invoices</a>
+            <a routerLink="../manage-invoices" class="btn btn-primary btn-lg mt-2" role="button">View Invoices</a>
           </div>
           <br>
           <p class="card-text"><small class="text-muted"></small></p>
