Scrollbar bug fix

--- a/src/app/components/main-view/file-upload/file-upload.component.html
+++ b/src/app/components/main-view/file-upload/file-upload.component.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-
-<html lang="en">
+<div class="body-wrapper">
 
   <div class="loading-spinner" *ngIf="isLoading">
 
@@ -87,4 +85,4 @@
 
   </div>
 
-</html>
+</div>
