--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-
-<html lang="en">
+<div class="body-wrapper">
 
   <br><br>
   <div class="row row-cols-1 row-cols-md-3 g-4 mx-4">
@@ -11,9 +9,9 @@
           <h3 class="card-title"><strong>Receipts</strong></h3>
           <p class="card-text">You can either insert the receipt data manually, or upload an image and have its data extracted by Optical Character Recognition (OCR).</p>
           <div class="btn-group-vertical">
-            <a routerLink="../receipt-form" class="btn btn-primary btn-lg mb-2" role="button">Manual Insertion</a>
-            <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2 " role="button">OCR Data Extraction</a>
-            <a routerLink="../manage-receipts" class="btn btn-primary btn-lg mt-2" role="button">View Receipts</a>
+            <a routerLink="../receipt-form" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Manual Insertion</a>
+            <a routerLink="../file-upload" class="btn btn-primary btn-lg mt-2 mb-2 fw-bold" role="button">OCR Data Extraction</a>
+            <a routerLink="../manage-receipts" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">View Receipts</a>
           </div>
           <p class="card-text"><small class="text-muted"></small></p>
         </div>
@@ -28,8 +26,8 @@
           <p class="card-text mt-2">Keep track of your invoices and their due dates.</p>
           <br>
           <div class="btn-group-vertical mt-3 mb-5">
-            <a routerLink="../add-invoice" class="btn btn-primary btn-lg mb-2" role="button">Add New Invoice</a>
-            <a routerLink="../manage-invoices" class="btn btn-primary btn-lg mt-2" role="button">View Invoices</a>
+            <a routerLink="../add-invoice" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Add New Invoice</a>
+            <a routerLink="../manage-invoices" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">View Invoices</a>
           </div>
           <br>
           <p class="card-text"><small class="text-muted"></small></p>
@@ -44,8 +42,8 @@
           <h3 class="card-title"><strong>Others</strong></h3>
           <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, travel expenses and others.</p>
           <div class="btn-group-vertical mt-3 mb-5">
-            <a href="#" class="btn btn-primary btn-lg mb-2" role="button">Add New Expense</a>
-            <a href="#" class="btn btn-primary btn-lg mt-2" role="button">Manage Expenses</a>
+            <a href="#" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Add New Expense</a>
+            <a href="#" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">Manage Expenses</a>
           </div>
           <br>
           <p class="card-text"><small class="text-muted"></small></p>
@@ -54,4 +52,4 @@
     </div>
   </div>
 
-</html>
+</div>
