--- a/src/app/components/main-view/manage-invoices/manage-invoices.component.html
+++ b/src/app/components/main-view/manage-invoices/manage-invoices.component.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
+<div class="body-wrapper">
 
-<html>
-
-  <body>
-
-    <div class="form-group px-5 py-3 row">
+    <div class="form-group px-5 py-3 row dates-div">
 
       <div class="col-sm-2 fw-bold text-center">
 
@@ -65,7 +61,7 @@
 
     </div>
 
-    <div *ngIf="noResults">
+    <div *ngIf="noResults" class="no-results-div">
       <div class="receipt-row row my-4 py-3 mx-2 rounded-5 shadow text-center">
         <h4>
           No invoices were found for the selected period!
@@ -73,7 +69,7 @@
       </div>
     </div>
 
-    <div *ngIf="invoicesFound">
+    <div *ngIf="invoicesFound" class="results-div">
       <div class="receipt-row row my-4 py-2 mx-2 rounded-5 shadow" *ngFor="let invoice of filteredInvoices">
 
         <div class="col-sm-1">
@@ -153,6 +149,4 @@
       </div>
     </div>
 
-  </body>
-
-</html>
+</div>
