--- a/src/app/components/main-view/manage-receipts/manage-receipts.component.html
+++ b/src/app/components/main-view/manage-receipts/manage-receipts.component.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-
-  <body>
+<div class="body-wrapper">
 
     <div class="form-group px-5 py-3 row">
 
@@ -135,6 +131,4 @@
       </div>
     </div>
 
-  </body>
-
-</html>
+</div>
