--- a/src/app/components/main-view/receipt-form/receipt-form.component.html
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-
-  <body class="body d-flex flex-column">
+<div class="body-wrapper">
 
     <form class="d-flex flex-column receipt-form" (ngSubmit)="onSubmit()" #myForm="ngForm">
 
@@ -106,6 +102,4 @@
 
     </form>
 
-  </body>
-
-</html>
+</div>
