--- a/src/app/components/main-view/manage-account/manage-account.component.css
+++ b/src/app/components/main-view/manage-account/manage-account.component.css
@@ -1,7 +1,3 @@
-html, body {
-  background-color: #ECF2F9;
-}
-
 .form-login, .form-register, .form-update-account {
   background: rgba(0, 0, 0, .60);
   max-width: 450px;
@@ -43,4 +39,9 @@ html, body {
 
 .extremely-small-font-size {
   font-size: 0.001rem;
+}
+
+.body-wrapper {
+  background-color: #ECF2F9;
+  height: calc(100vh - 106px);
 }
