--- a/src/app/components/main-view/spending-statistics/spending-statistics.component.css
+++ b/src/app/components/main-view/spending-statistics/spending-statistics.component.css
@@ -35,5 +35,11 @@ body {
 }
 
 .full-height {
-  height: calc(100% - 106px);
+  height: calc(80% - 106px);
+}
+
+.body-wrapper {
+  background-color: #ECF2F9;
+  height: calc(100vh - 106px);
+  overflow-x: hidden;
 }
