--- a/src/app/components/main-view/spending-statistics/spending-statistics.component.html
+++ b/src/app/components/main-view/spending-statistics/spending-statistics.component.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-
-  <body>
+<div class="body-wrapper">
 
     <div class="row full-height py-5">
 
@@ -218,6 +214,4 @@
     </div>
     -->
 
-  </body>
-
-</html>
+</div>
