--- a/src/app/components/main-view/add-invoice/add-invoice-dialog/add-invoice-dialog.component.css
+++ b/src/app/components/main-view/add-invoice/add-invoice-dialog/add-invoice-dialog.component.css
@@ -18,7 +18,7 @@ button {
 }
 
 button:hover {
-  background-color: aqua;
+  background-color: #0b5f89;
   transition: all 0.2s ease;
   color: white !important;
 }
