--- a/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.css
+++ b/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.css
@@ -13,7 +13,6 @@ button:hover {
   color: white !important;
 }
 
-.h1-error {
-  color: red;
-  font-size: 1rem;
+.error-message {
+  color: red !important;
 }
