--- a/src/app/components/main-view/receipt-form/receipt-form-dialog/receipt-form-dialog.component.css
+++ b/src/app/components/main-view/receipt-form/receipt-form-dialog/receipt-form-dialog.component.css
@@ -8,7 +8,7 @@ button {
 }
 
 button:hover {
-  background-color: aqua;
+  background-color: #0b5f89;
   transition: all 0.2s ease;
   color: white !important;
 }
