--- a/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.html
+++ b/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
+<div class="body-wrapper">
 
-<html>
+  <h1 mat-dialog-title class="fw-bold text-center" *ngIf="isNothing">Are you sure you want to mark this invoice as
+    paid?</h1>
 
-    <body class="dialog-body">
+  <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isError">{{errorMessage}}</h1>
 
-    <h1 mat-dialog-title class="fw-bold text-center" *ngIf="isNothing">Are you sure you want to mark this invoice as paid?</h1>
+  <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isSuccess">{{successMessage}}</h1>
 
-    <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isError">{{errorMessage}}</h1>
+  <div mat-dialog-content class="dialog-content">
 
-    <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isSuccess">{{successMessage}}</h1>
+  </div>
 
-    <div mat-dialog-content class="dialog-content">
+  <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isNothing">
+    <button mat-button class="btn btn-primary fw-bold" (click)="onYesClick()">Yes</button>
+    <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">No</button>
+  </div>
 
-    </div>
+  <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isError">
+    <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">Ok</button>
+  </div>
 
-    <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isNothing">
-      <button mat-button class="btn btn-primary fw-bold" (click)="onYesClick()">Yes</button>
-      <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">No</button>
-    </div>
+  <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isSuccess">
+    <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">Ok</button>
+  </div>
 
-    <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isError">
-      <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">Ok</button>
-    </div>
-
-    <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isSuccess">
-      <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">Ok</button>
-    </div>
-
-  </body>
-
-</html>
+</div>
