--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -40,9 +40,9 @@
         <img class="card-img-top rounded-5" src="../../../../assets/images/altele.jpg" alt="Other Expenses">
         <div class="card-body">
           <h3 class="card-title"><strong>Others</strong></h3>
-          <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, travel expenses and others.</p>
+          <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, entertainment expenses and others.</p>
           <div class="btn-group-vertical mt-3 mb-5">
-            <a href="#" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Add New Expense</a>
+            <a routerLink="../add-expense" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Add New Expense</a>
             <a href="#" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">Manage Expenses</a>
           </div>
           <br>
