--- a/src/app/components/main-view/manage-account/manage-account-dialog/manage-account-dialog.component.html
+++ b/src/app/components/main-view/manage-account/manage-account-dialog/manage-account-dialog.component.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
+<div class="body-wrapper">
 
-<html>
+  <h1 mat-dialog-title class="fw-bold text-lg-center">Success!</h1>
 
-  <body class="dialog-body">
+  <div mat-dialog-content class="dialog-content">
+    <p>
+      Your account settings have been successfully modified!
+    </p>
+  </div>
 
-    <h1 mat-dialog-title class="fw-bold text-lg-center">Success!</h1>
+  <div mat-dialog-actions class="dialog-actions" align="center">
+    <button mat-button class="btn btn-primary fw-bold" (click)="onClose()">Close</button>
+  </div>
 
-    <div mat-dialog-content class="dialog-content">
-      <p>
-        Your account settings have been successfully modified!
-      </p>
-    </div>
-
-    <div mat-dialog-actions class="dialog-actions" align="center">
-      <button mat-button (click)="onClose()">Close</button>
-    </div>
-
-  </body>
-
-</html>
+</div>
