--- a/src/app/components/main-view/manage-receipts/receipt-items-dialog/receipt-items-dialog.component.html
+++ b/src/app/components/main-view/manage-receipts/receipt-items-dialog/receipt-items-dialog.component.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
+<div class="body-wrapper">
 
-<html>
-
-  <body class="dialog-body">
-
-  <h1 class="h1-regular fw-bold mb-2" mat-dialog-title align="center">Receipt Items</h1>
+  <h2 mat-dialog-title class="h1-regular fw-bold" align="center">Receipt Items</h2>
 
   <div mat-dialog-content class="dialog-content align-items-center text-black">
 
@@ -74,6 +70,4 @@
     <button mat-button (click)="onBackClick()">Back</button>
   </div>
 
-  </body>
-
-</html>
+</div>
